--- a/StockManagement Solution/StockManagement.Web/nbproject/private/private.properties
+++ b/StockManagement Solution/StockManagement.Web/nbproject/private/private.properties
@@ -11,5 +11,5 @@ j2ee.server.instance=tomcat80:home=C:\\Program Files\\apache-tomcat-8.5.16
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
