--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /StockManagement Solution/StockManagement.ObjectModel/nbproject/private/
+/StockManagement Solution/StockManagement.ObjectModel/nbproject/private/*.*
 /StockManagement Solution/StockManagement.Services/nbproject/private/
 /StockManagement Solution/StockManagement.Web/nbproject/private/
 /StockManagement Solution/StockManagement.Web/build/
